# fed-twin

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.sh  run_project.sh
.github/workflows/: ci.yml
config/: config.json  config1.json
docker/: Dockerfile.app  Dockerfile.mlflow
k8s/: mlflow-server.yaml  pytorchjob_fl.yaml  rbac.yaml
setup/: install_k8s_local.sh  install_karmada_local.sh  install_local.sh  install_multi_cluster_local.sh  install_single_cluster_local.sh  kind-cluster.yaml  kind-karmada-host.yaml  kind-multi-cluster-host.yaml  kind-single-cluster.yaml  teardown_k8s_local.sh  teardown_karmada_local.sh  teardown_local.sh  teardown_multi_cluster_local.sh  teardown_single_cluster_local.sh
src/: automate_run.py  fetch_results.py
src/analysis/: compare_results.py  generalization_gap.py  worker_diversity.py
src/core/: client.py  engine.py  server.py  tracking.py
src/pipelines/: fed_twin_multi_cluster_pipeline.py  fed_twin_single_cluster_pipeline.py  fl_k8s_pipeline.py  fl_karmada_pipeline.py  fl_pipeline.py  fl_visual_k8s_pipeline.py  fl_visual_pipeline.py  generate_fed_twin_visual_pipeline.py  generate_fl_visual_pipeline.py  generate_visual_pipeline.py  single_k8s_pipeline.py  single_karmada_pipeline.py  single_pipeline.py  single_twin_multi_cluster_pipeline.py  single_twin_single_cluster_pipeline.py  single_twin_visual_single_cluster_pipeline.py  single_visual_k8s_pipeline.py  (+1 more)
tests/: conftest.py  test_automate_run.py  test_client.py  test_engine.py  test_fetch_results.py  test_server.py
