[project]
name = "fed-twin"
version = "0.1.0"
description = "Federated Digital Twin Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.42.48",
    "flwr==1.26.1",
    "google-cloud-storage==3.9.0",
    "gymnasium==1.2.3",
    "jinja2==3.1.6",
    "kfp==2.15.2",
    "kfp-pipeline-spec==2.15.2",
    "kfp-server-api==2.15.2",
    "kubernetes==30.1.0",
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "seaborn==0.13.2",
    "torch==2.2.2",
    "mlflow-skinny>=2.20.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
